--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ services:
   - docker
 
 before_install:
-  - docker build . --file docker/Dockerfile --tag hello-spa
+  - docker build . --file docker/Dockerfile --tag dudekk/hello-spa
 
 script: 'true'
 
